{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 363,
  "lineage": "2bae1ccb-964f-6eba-f76b-ab3bdc83ba82",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-04750c2c93f8ccd01",
            "description": "Security Group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04750c2c93f8ccd01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from AnyWhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "94102178-laC-TFT-alb",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Owner": "94102178"
            },
            "timeouts": null,
            "vpc_id": "vpc-0981d92a8a02d6682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-0291e2704c136b1a5",
            "description": "Security Group for Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0291e2704c136b1a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from AnyWhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "94102178-laC-TFT-Bastion",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Owner": "94102178"
            },
            "timeouts": null,
            "vpc_id": "vpc-0981d92a8a02d6682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-0264ff8df91d0b30f",
            "description": "Security Group for DB Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0264ff8df91d0b30f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "3306 from WAS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c3f8955eae931b3"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "94102178-laC-TFT-db",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Owner": "94102178"
            },
            "timeouts": null,
            "vpc_id": "vpc-0981d92a8a02d6682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.nlb_sg",
            "aws_security_group.was_sg",
            "aws_security_group.web_sg",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nlb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-02b04ae99ba91a237",
            "description": "Security Group for NLB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b04ae99ba91a237",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "8080 from WEB Server",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f3526a6d707baff"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "94102178-laC-TFT-nlb",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Owner": "94102178"
            },
            "timeouts": null,
            "vpc_id": "vpc-0981d92a8a02d6682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "was_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-01c3f8955eae931b3",
            "description": "Security Group for WAS server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c3f8955eae931b3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "8080 from NLB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b04ae99ba91a237"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "ssh from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0291e2704c136b1a5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "94102178-laC-TFT-was",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Owner": "94102178"
            },
            "timeouts": null,
            "vpc_id": "vpc-0981d92a8a02d6682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.nlb_sg",
            "aws_security_group.web_sg",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-08f3526a6d707baff",
            "description": "Security Group for WEB server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f3526a6d707baff",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from AnyWhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04750c2c93f8ccd01"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "ssh from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0291e2704c136b1a5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "94102178-laC-TFT-web",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Owner": "94102178"
            },
            "timeouts": null,
            "vpc_id": "vpc-0981d92a8a02d6682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-0d0cfc7442a2284bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0cfc7442a2284bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "94102178-IaC-TFT-db-subnet-privatea"
            },
            "tags_all": {
              "Name": "94102178-IaC-TFT-db-subnet-privatea",
              "Owner": "94102178"
            },
            "vpc_id": "vpc-0981d92a8a02d6682"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-0002f5e2d5b0fbfe5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.130.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0002f5e2d5b0fbfe5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "94102178-IaC-TFT-db-subnet-privatec"
            },
            "tags_all": {
              "Name": "94102178-IaC-TFT-db-subnet-privatec",
              "Owner": "94102178"
            },
            "vpc_id": "vpc-0981d92a8a02d6682"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:vpc/vpc-0981d92a8a02d6682",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fad25a03bb6a7803",
            "default_route_table_id": "rtb-090f31f9930a3bc53",
            "default_security_group_id": "sg-0d54729ab8ff67c59",
            "dhcp_options_id": "dopt-09bc5c4d3ccca2488",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0981d92a8a02d6682",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090f31f9930a3bc53",
            "owner_id": "637423403127",
            "tags": {
              "Name": "94102178-IaC-TFT-VPC"
            },
            "tags_all": {
              "Name": "94102178-IaC-TFT-VPC",
              "Owner": "94102178"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}